--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Favicon -->
-  <link rel="icon" href="{{ url_for('static', filename='img/moviebase-moviebaselogo.jpg') }}" type="image/x-icon"/>
+  <link rel="icon" href="{{ url_for('static', filename='img/moviebaselogo.jpg') }}" type="image/x-icon"/>
   <link rel="shortcut icon" href="{{ url_for('static', filename='img/moviebae-moviebaselogo.jpg') }}" type="image/x-icon"/>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css">
   <!-- Toastr CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
 
   {% endblock%}
 </head>
@@ -28,10 +30,11 @@
 
 
 <!-- Navigation -->
+<div id="navbar">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="{{ url_for('static', filename= 'img/moviebase-moviebaselogo.jpg') }}" width="150"  alt="Moviebase">
+        <img src="{{ url_for('static', filename='img/moviebaselogo.jpg') }}" width="150"  alt="Moviebase">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -39,23 +42,24 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="/">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="/movies">Movies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="/producers">Producers</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+</div>
 
 
 
