--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,11 +6,17 @@
 {% block page_content%}
 {{ super() }}
 
-<div class="container">
-    <h1 class="mt-5"><i  aria-hidden="true"></i> Welcome to MovieBase!</h1>
-    <p>MovieBase is a web application developed by Edward Montooth which allows a user to track and update a listing of their favorite movies and producers.</p>
-  </div>
 
+
+
+
+
+
+<div class="container" id="homepageguy">
+
+    <h1  class="mt-5" id="bigtitle"><i  aria-hidden="true"></i> Welcome to MovieBase!</h1>
+    <p style="color:Green; font-size:20px;">MovieBase is a web application developed by Edward Montooth which allows a user to track and update a listing of their favorite movies and producers.</p>
+  </div>
 
 
 {% endblock%}
