--- a/templates/producer-all.html
+++ b/templates/producer-all.html
@@ -18,7 +18,7 @@
           </tr>
         </thead>
         <tbody>
-          {% for producer in produers %}
+          {% for producer in producers %}
           <tr>
               <th scope="row">{{producer.id}}</th>
               <td>{{producer.name}}</td>
