--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,10 +13,11 @@
 
 
 <div class="container" id="homepageguy">
+<h1 class="mt-5" id="bigtitle" style="font-family: 'Roboto', sans-serif; color: black;">Welcome to MovieBase!</h1>
+<p style="color:black;">MovieBase is a web application developed by Edward Montooth which allows a user to track and update a listing of their favorite movies and producers.
+</p>
 
-    <h1  class="mt-5" id="bigtitle"><i  aria-hidden="true"></i> Welcome to MovieBase!</h1>
-    <p style="color:Green; font-size:20px;">MovieBase is a web application developed by Edward Montooth which allows a user to track and update a listing of their favorite movies and producers.</p>
-  </div>
+</div>
 
 
 {% endblock%}
