--- a/templates/movie-add.html
+++ b/templates/movie-add.html
@@ -35,7 +35,7 @@
 
       <div class="form-group">
         <label>Actors</label>
-        <textarea class="form-control" name="acrtors" placeholder="Actors" required="true"></textarea>
+        <textarea class="form-control" name="actors" placeholder="Actors" required="true"></textarea>
       </div>
       <button type="submit" class="btn btn-primary">Add Movie</button>
     </form>
